update logo to latest VU logo

--- a/vandy-login-page/main-generic-v.css
+++ b/vandy-login-page/main-generic-v.css
@@ -352,7 +352,7 @@ input:-ms-input-placeholder {
 
 .ping-header {
   padding: 90px 15px 15px 15px;
-  background: #333 url('Vanderbilt.png') 0px 15px no-repeat;
+  background: #333 url('2022-Vanderbilt-University-wordmark.jpg') 0px 15px no-repeat;
   background-size: contain; 
   font-size: 16px;
   min-height: 16px;
